--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="Web Project">
+    <wb-module deploy-name="2020_WebProgramming_TeamProject">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="Web_Project"/>
-        <property name="java-output-path" value="/Web Project/build/classes"/>
+        <property name="context-root" value="2020_WebProgramming_TeamProject"/>
+        <property name="java-output-path" value="/2020_WebProgramming_TeamProject/build/classes"/>
     </wb-module>
 </project-modules>
