make userinfo Page

--- a/WebContent/styles/Supports.css
+++ b/WebContent/styles/Supports.css
@@ -3,7 +3,7 @@ body{
 }
 
 #pageImg{
-	background-image: url("../images/supportImg.jpg");
+	background-image: url("../images/supportImg/supportImg.jpg");
 	width: 100%;
 }
 
