--- a/WebContent/styles/MyPage.css
+++ b/WebContent/styles/MyPage.css
@@ -39,3 +39,30 @@ body{
 	margin-right: 350px;
 	margin-bottom: 50px;
 }
+
+@media screen and (max-width:1920px) { 
+	.contents{
+		margin-top: 50px;
+		margin-left: 200px;
+		margin-right: 200px;
+		margin-bottom: 50px;
+	}
+}
+	
+@media screen and (max-width:1440px) { 
+	.contents{
+		margin-top: 50px;
+		margin-left: 100px;
+		margin-right: 100px;
+		margin-bottom: 50px;
+	}
+}
+	
+@media screen and (max-width:1243px) { 
+	.contents{
+		margin-top: 50px;
+		margin-left: 50px;
+		margin-right: 50px;
+		margin-bottom: 50px;
+	}
+}
