login_Event_update

--- a/WebContent/styles/login_page_css/login_main.css
+++ b/WebContent/styles/login_page_css/login_main.css
@@ -2,7 +2,7 @@
 
 body{
 	margin:0;
-	background-image: url('../../images/ws_image/main.jpg');
+	background-image: url('../../images/login_Event_Img/main.jpg');
 	background-size:cover;
 	padding:0;
 	font-family : '맑은 고딕', sans-serif;
