--- a/WebContent/styles/css/index_moblie.css
+++ b/WebContent/styles/css/index_moblie.css
@@ -130,5 +130,55 @@ header > div .spot li span { position: absolute; left:-40000%;}
 .btn.type1 { border:2px solid #00704A; background: #00704A; color:#fff;}
 .btn.type2 { padding:0 2.3rem 0 2.3rem;}
 
+
+.companytitle {height: 6rem; margin-left: 9%;}
+.companytitle > .clear > .tit > h1{ color:#383f43;  font-size: 20px;}
+.companytitle > .clear > .tit > p{ color:#70767a;  font-size: 15px;}
+
+/* 소개 */
+.companystart {position: relative; width: 100%;height: 460px; background:url('../image/company.PNG') no-repeat center top;}
+.companystart > div > p{text-align: center; padding-top: 7rem; font-size: 0.9rem; color:black;}
+.companystart > div .member_title{font-size:2.4rem; color:#464646;}
+.companyindex { position: relative;}
+.companyindex > div > p{ text-align:right; font-size:0.6rem; margin : 1rem 18rem 0 0;}
+
+/* 회사 소개 1*/
+.companyarticle {position: relative; height: 600px;  background:#fff;}
+.companyarticle > div div{ position: absolute;}
+.companyarticle > div div.img1{ left : 2%; top: 0.7rem;z-index: 5;}
+.companyarticle > div > p{text-align: center; padding-top: 4rem; font-size: 0.9rem;}
+.companyarticle > div .member_title{font-size:1.4rem; color: black;}
+.companyarticle > div div.info {position: absolute;   height: 17rem; left:2%; top: 24rem;}
+.companyarticle > div div.info span { font-size:1rem; color:#202023; line-height:100%;}
+.companyarticle > div div.info p { padding:.7rem 0 0 0; font-size:0.65rem; color:#464646; line-height:2rem;}
+
+/* 회사 소개 2 */
+.companyarticle2 {position: relative; height: 600px;  background:#fff;}
+.companyarticle2 > div div{ position: absolute;}
+.companyarticle2 > div div.img1{ left : 2%; top: 0.7rem;z-index: 5;}
+.companyarticle2 > div > p{text-align: center; padding-top: 4rem; font-size: 0.9rem;}
+.companyarticle2 > div .member_title{font-size:1.4rem; color: black;}
+.companyarticle2 > div div.info {position: absolute;  height: 17rem; left:2%; top: 24rem;}
+.companyarticle2 > div div.info span { font-size:1rem; color:#202023; line-height:100%;}
+.companyarticle2 > div div.info p { padding:.7rem 0 0 0; font-size:0.65rem; color:#464646; line-height:2rem;}
+
+/* 회사 소개 */
+.companylogoin {position: relative;  height: 35rem; text-align: center; margin-top: 1rem;}
+.companylogoin div { position: relative; }
+.companylogoin > div div{ position: absolute;}
+
+
+.companylogoin > div div.mind { top: 1rem; left : 19%;}
+.companylogoin > div div.mind strong { font-size: 18px; color:#333;}
+.companylogoin > div div.mind .field { font-size: 13px; color:#4c5459;}
+
+.companylogoin > div div.love { top: 10rem; left : 24%;}
+.companylogoin > div div.love strong { font-size: 18px; color:#333; }
+.companylogoin > div div.love .field { font-size: 13px; color:#4c5459;}
+
+.companylogoin > div div.lock { top: 20rem; left : 21%;}
+.companylogoin > div div.lock strong { font-size: 18px; color:#333;}
+.companylogoin > div div.lock .field { font-size: 13px; color:#4c5459;}
+
 /* footer */
 footer .top {display: none;}
