--- a/WebContent/styles/Event_page.css
+++ b/WebContent/styles/Event_page.css
@@ -5,72 +5,73 @@
     font-weight: normal;
     font-style: normal;
 }
-body{
-	padding:0;
+.main{
+	padding:0 0 50px 0;
 	margin:0;
 	font-family: 'GmarketSansMedium';
 }
-.main_head{
+.main .main_head{
 	background-image: url('../images/login_Event_Img/Event.jpg');
 	background-size:cover;
 	width:100%;
-	height:500px;
+	height:400px;
 	padding:20px 0 0 0;
 }
-.main_head .main_font{
-	margin:170px 0 0 0;
+.main .main_head .main_font{
+	margin:120px 0 0 0;
+	color:blakc;
 }
-.main_head .main_font p{
+.main .main_head .main_font p{
 	margin:0;
 	padding:0;
 }
-.main_head .main_font hr{
+.main .main_head .main_font hr{
 	margin:40px 0 40px 0;
 	background-color:black;
 	border:1px solid black;
 	width:5%;
 }
-.main_body .body_table{
+.main .main_body .body_table{
 	margin:100px auto 0;
 	width:1000px;
 	border-collapse:collapse;
 	text-align:center;
 }
-.main_body .body_table th,.main_body .body_table td{
+.main .main_body .body_table th,.main_body .body_table td{
 	padding:20px 0 20px 0;
 }
-.main_body .body_table td{
+.main .main_body .body_table td{
 	border:0;
 	border-top:1px solid black;
 	border-bottom:1px solid black;
 }
-.main_body .body_table tbody tr:hover{
+.main .main_body .body_table tbody tr:hover{
 	color:white;
 	background-color:#0e1163;
 }
-.main_body .body_table th{
+.main .main_body .body_table th{
 	border:0;
 	border-top:2px solid black;
 }
-.main_body .pageNumber{
+.main .main_body .pageNumber{
 	padding:50px;
 	margin:50px;
 }
-.detail_body{
+.main .detail_body{
 	width:1100px;
 	margin:100px auto 0;
 }
-.detail_body hr{
+.main .detail_body hr{
 	background-color:black;
 	border:1px solid black;
 }
-.detail_body .detail_head thead td{
+.main .detail_body .detail_head thead td{
 	border:0;
 	border-top:2px solid black;
 	border-bottom:2px solid black;
 	padding:30px 0;
 }
-.detail_body .detail_but{
+.main .detail_body .detail_but{
 	width:200px;
 	height:50px;
 	margin:0 0 100px 0;
@@ -83,7 +84,7 @@ body{
 	font-size:20px;
 	font-family: 'GmarketSansMedium';
 }
-a:visited{
+.main a:visited{
 	text-decoration:none;
 	color:black;
 }
