--- a/WebContent/styles/Support_page_css/Qna_Confirm.css
+++ b/WebContent/styles/Support_page_css/Qna_Confirm.css
@@ -4,7 +4,7 @@ body{
 }
 	
 #pageImg{
-	background-image: url("../../images/noticeImg/noticeImg.jpg");
+	background-image: url("../../images/supportImg/supportImg.jpg");
 	width: 100%;
 }
 	
@@ -25,7 +25,49 @@ body{
 #pageImgTxt.page_letter{
 	font-size: 17px;
 }
-
+#qnaSection{
+		height: 100%;
+	}
+	#qna_form .qna_title_date>table{
+		width : 100%;
+		padding : 10px;
+		border-bottom: 2px solid #dadada;
+	}
+	#qna_form .qna_title_date>table td:nth-child(1){
+		width: 60%;
+	}
+	#qna_form .qna_title_date>table td:nth-child(2){
+		width: 20%;
+		text-align: right;
+	}
+	#qna_form .qna_title_date>table td:nth-child(3){
+		width: 20%;
+		text-align: right;
+	}
+	#qna_form .qna_contents>table{
+		margin-top: 20px;
+		text-align: center;
+	}
+	#qna_form .qna_contents>table tr:nth-child(2){
+		padding-top: 30px;
+	}
+	#qna_form .qna_contents>table tr:nth-child(2) td{
+		text-align: left;
+	}
+	#ans_form{
+		margin-top: 20px;
+		width: 100%
+	}
+	#ans_form{
+		margin-bottom: 100px;
+	}
+	#ans_form>.qna_header{
+		border-bottom: 2px solid #dadada;
+		margin-top: 150px;
+		margin-bottom: 25px;
+		padding-bottom: 17px;
+	}
+	
 .contents{
 	margin-top: 50px;
 	margin-left: 450px;
@@ -49,35 +91,6 @@ body{
 	margin-top: 40px;
 	margin-bottom: 80px;
 }
-#noticeSection{
-		height: 100%;
-	}
-	#notice_form .notice_title_date>table{
-		width : 100%;
-		padding : 10px;
-		border-bottom: 2px solid #dadada;
-	}
-	#notice_form .notice_title_date>table td:nth-child(1){
-		width: 70%;
-	}
-	#notice_form .notice_title_date>table td:nth-child(2){
-		width: 30%;
-		text-align: right;
-	}
-	#notice_form .notice_contents>table{
-		margin-top: 20px;
-		text-align: center;
-	}
-	#notice_form .notice_contents>table tr:nth-child(1){
-		margin: 0px, 30px, 0px, 30px;
-	}
-	#notice_form .notice_contents>table tr:nth-child(2){
-		padding-top: 30px;
-	}
-	#notice_form .notice_contents>table tr:nth-child(2) td{
-		text-align: left;
-	}
-
 @media screen and (max-width:1910px) { 
 	.contents{
 		margin-top: 50px;
