--- a/WebContent/styles/css/header.css
+++ b/WebContent/styles/css/header.css
@@ -1,8 +1,8 @@
 @charset "EUC-KR";
 @charset "utf-8";
 
-html { font-size : 20px;}
-body { font-size : 1rem;}
+/*html { font-size : 20px;}
+body { font-size : 1rem;}*/
 
 /* Çì´õ */
 header {background: #f6f5ef; border: top 2px solid #000;}
