--- a/WebContent/styles/Order.css
+++ b/WebContent/styles/Order.css
@@ -7,7 +7,7 @@
 /*banner*/
 body{
 	margin:0;
-	font-family : '¸¼Àº °íµñ', sans-serif;
+	font-family : sans-serif;
 }
 #pageImg{
 	background-image: url("../images/noticeImg/noticeImg.jpg");
@@ -35,8 +35,7 @@ body{
 	background-color:lightgray;
 	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
 	text-decoration: none;
-	font-size:px;
-	margin:100px auto 0;
+	padding-bottom:20px;
 }
 .orderbtn:hover{
 	background-color:black;
@@ -51,7 +50,7 @@ body{
     padding: 0;
     overflow: hidden;
     margin: 0 auto;
-    width: 600px;
+    display:table;
 }
 .menubar {
     float: left;
@@ -107,10 +106,10 @@ body{
 	transition: all 0.3s ease-in-out;
 }
 /*Orderlist page css*/
-.ordertable{
+#ordertable{
 	padding-top:30px;
-	width:80%;
-	border-top:3px solid #444444;
+	width:70%;
+	border:0;
 	border-collapse: collapse;
 	text-align:center;
 }
@@ -119,6 +118,9 @@ body{
 	font-weight:bold;
 	padding:10px;
 }
+#ordertable td{
+	border-bottom: 1px solid #444444;
+}
 #ordertable #list1{
 	width:65%;
 }
@@ -126,14 +128,14 @@ body{
 	border-bottom: 1px solid #444444;
 	padding:10px;
 }
-#ordertable #cartnow{
+#ordertable .cartnow{
 	border:none;
 	text-align:center;
 	color:#444444;
 	font-size:25px;
 	width:80%;
 }
-#ordertable #cartco{
+#ordertable .cartco{
 	border:none;
 	text-align:center;
 	color:#444444;
@@ -146,4 +148,18 @@ body{
 	font-size:18px;
 	font-weight:700;
 	width: 700px;
+}
+
+#ordertable #cartmay{
+	border:none;
+	text-align:center;
+	color:#444444;
+	font-size:25px;
+	width:10%;
+}
+#ai{
+	border-bottom:none;
+	text-align:right;
+	font-size:25px;
+	font-weight:bold;
 }
